--- a/sartup-login.css
+++ b/sartup-login.css
@@ -14,3 +14,13 @@
     border: 6px solid #c3c7c9; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     filter: blur(0.25px);
 }
+
+.img_autofit{
+  width: 100%;
+  height: 100%;
+}
+
+.logo{
+  width: 100px;
+  height: 100px;
+}
