--- a/sartup-login.css
+++ b/sartup-login.css
@@ -24,3 +24,44 @@
   width: 100px;
   height: 100px;
 }
+
+.icon {
+  right: 40px;
+  position: fixed;
+  top: 90%;
+  animation: glowing-border 2s infinite; 
+  border-radius: 7.5px;
+}
+
+/* Define the animation keyframes */
+@keyframes glowing-border {
+  0% {
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.7);
+  }
+  50% {
+    box-shadow: 0 0 0 5px rgba(255, 255, 255, 0.7);
+  }
+  100% {
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.7);
+  }
+}
+
+.mouse-icon {
+  position: fixed;
+  right: 110px;
+  top: 90%;
+  animation: mouse-icon-animation 3s infinite;
+  animation-timing-function: ease-in-out;
+}
+
+@keyframes mouse-icon-animation {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(40px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
