--- a/style.css
+++ b/style.css
@@ -21,13 +21,13 @@ body.dark-mode {
 h1 {
   text-align: center;
 }
-
 button#darkModeToggle {
+/*
   position: absolute;
   left: 0;
   top: 0;
+*/
 }
-
 /* Text input and output fields */
 .form-control {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -72,10 +72,11 @@ button#darkModeToggle {
   align-items: center;
 }
 
+ /*
 #language-select { 
   position: absolute;
   right: 0;
   top: 0
 }
-
+*/
   /* http://colormind.io/template/material-dashboard/ */
