--- a/style.css
+++ b/style.css
@@ -96,3 +96,10 @@ h1 {
   height: 50px;
   margin-left: 15px;
 }
+
+ .clean_links{
+  text-decoration: none; /* remove underline */
+  color: inherit; /* inherit the color from the parent element */
+  font-weight: normal; /* reset the font weight */
+}
+
