improved navbar und footer

--- a/style.css
+++ b/style.css
@@ -103,3 +103,11 @@ h1 {
   font-weight: normal; /* reset the font weight */
 }
 
+
+/* needed when mouse/icon animation is present in order for the footer border to take full width of screeen*/
+footer {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 100;
+}
